--- a/bbc.html
+++ b/bbc.html
@@ -295,9 +295,9 @@ h2{color:#505050;
         <h2>Watch\Listen</h2>
 
       <ul>
-         <li class="bb"><a href="">BBC News Live</a></li>
-         <li class="bb"><a href="">Radio 5 Live</a></li>
-         <li class="bb"><a href="">Osborne questioned on budget</a></li>
+         <li class="bb"><a href="http://www.bbc.com">BBC News Live</a></li>
+         <li class="bb"><a href="http://www.bbc.com">Radio 5 Live</a></li>
+         <li class="bb"><a href="http://www.bbc.com">Osborne questioned on budget</a></li>
    
    
      </ul>
